# midilink

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: adapter.rs  main.rs
