[package]
name = "midilink"
version = "1.0.4"
description = "Mixxx MIDI to Ableton Link adapter"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/midilink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
ctrlc = "3.4.4"
dotenvy = "0.15.7"
midir = "0.9.1"
midly = "0.5.3"
rusty_link = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
